--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
     <string name="token">e3BfTEBTUfYvLIQbcnwWNTehYYVSVuXw</string>
     <string name="token_secret">J7nbh34hhbw1rHKZi-qZuY4gnmY</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="preference_file_key">com.epicodus.myrestaurants.PREFERENCE_FILE_KEY</string>
 
 </resources>
