--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
 
     <string name="preference_file_key">com.epicodus.myrestaurants.PREFERENCE_FILE_KEY</string>
 
+    <string name="firebase_url">https://myrestaurants1.firebaseio.com</string>
+
 </resources>
